k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kodey-boilerplate
  labels:
    app: kodey-boilerplate
    environment: base
