k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kodey-boilerplate-service
  namespace: kodey-boilerplate
  labels:
    app: kodey-boilerplate
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: kodey-boilerplate
